--- a/css/ad_css.css
+++ b/css/ad_css.css
@@ -4,7 +4,11 @@
   font-family: "Times New Roman", Times, serif;
 }
 
-.col-xs-6.col-sm-6.col-md-6.col-lg-6.hoten_cb_sua {
+div#image_preview {
+    padding-left: 30%;
+}
+
+.col-xs-12.col-sm-6.col-md-6.col-lg-6.hoten_cb_sua {
     padding-left: 0px;
     padding-right: 4px;
 }
@@ -28,8 +32,6 @@
 .menutrai {
     padding-bottom: 10px;
 }
-
-
 
 .nuthemmoi input.btn.btn-primary.btn-block {
     font-size: 16px;
