add sinh vien thanh cong

--- a/css/ad_css.css
+++ b/css/ad_css.css
@@ -4,6 +4,11 @@
   font-family: "Times New Roman", Times, serif;
 }
 
+.thumbnail.mua_nen_7 {
+    background-color: #8BC34A;
+    color: white;
+}
+
 .thumbnail.mua_nen_6 {
     background-color: #FF5722;
     color: white;
@@ -54,6 +59,7 @@ div#image_preview {
 
 .menutrai {
     padding-bottom: 10px;
+    padding: 0px;
 }
 
 .nuthemmoi input.btn.btn-primary.btn-block {
