--- a/css/ad_css.css
+++ b/css/ad_css.css
@@ -311,9 +311,9 @@ hr.ngay_ad {
 }
 
 .dropdown-container>a{
-    color: #ffffff;
-    border-top: 1px solid white;
-    background-color: #3F51B5;
+    color: #555;
+    border-top: 1px solid #b7e3e3;
+    background-color: #f5f5f5;
     margin-left: 9px;
 }
 
