--- a/css/ad_css.css
+++ b/css/ad_css.css
@@ -4,6 +4,18 @@
   font-family: "Times New Roman", Times, serif;
 }
 
+input[type="search"],div#myTable_length select {
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 .boviennha {
     border: none;
 }
